// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blue Submit Button 1`] = `
<button
  className="btnBlue"
  disabled={false}
  onClick={undefined}
  type="submit"
>
  Submit
</button>
`;

exports[`Blue Submit Button 2`] = `
<button
  className="btnBlue"
  disabled={false}
  onClick={undefined}
  type="submit"
>
  Submit
</button>
`;

exports[`Blue Submit Button 3`] = `
<input
  className="btnDark"
  disabled={false}
  onClick={undefined}
  type="reset"
  value="Reset"
/>
`;

exports[`Dark Reset Input 1`] = `
<input
  className="btnDark"
  disabled={false}
  onClick={undefined}
  type="reset"
  value="Reset"
/>
`;

exports[`Default Listen Button 1`] = `
<button
  className="btnWhite"
  disabled={false}
  onClick={undefined}
  type="button"
>
  Listen
</button>
`;

exports[`Default Listen Button 2`] = `
<button
  className="btnWhite"
  disabled={false}
  onClick={undefined}
  type="button"
>
  Listen
</button>
`;

exports[`Orange Donate Button 1`] = `
<a
  className="btnOrange"
  href="/donate"
  onClick={undefined}
  role="button"
>
  Donate
</a>
`;

exports[`Orange Donate Link 1`] = `
<a
  className="btnOrange"
  href="/donate"
  onClick={undefined}
  role="button"
>
  Donate
</a>
`;

exports[`With Knobs 1`] = `
<button
  className="btnWhite"
  disabled={false}
  href={undefined}
  onClick={undefined}
  type="button"
>
  Listen
</button>
`;
